Thêm 2 button đến form ungws dụng

--- a/kiemtraketthucmon/MainWindow.xaml
+++ b/kiemtraketthucmon/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button x:Name="btncho" Content="CHO" HorizontalAlignment="Left" Height="62" Margin="177,139,0,0" VerticalAlignment="Top" Width="130"/>
+        <Button x:Name="btncho" Content="CHO" HorizontalAlignment="Left" Height="62" Margin="177,139,0,0" VerticalAlignment="Top" Width="130" Click="Btncho_Click_1"/>
         <Button x:Name="btnmeo" Content="Button" HorizontalAlignment="Left" Height="62" Margin="469,139,0,0" VerticalAlignment="Top" Width="143" Click="Button_Click"/>
 
     </Grid>
